# heal-routing-analysis

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yaml  pyproject.toml  run_multiple.sh  run_multiple_days.sh  run_multiple_sensitivities.sh
config/: config_sample.yaml  config_test.yaml
config/conf/: developer_config.yaml  ors_config.yaml
data/: aoi.gpkg  poi_tags.json
data/mapdata/: style_route_level.qml  style_segment_level.qml  style_usage_frequency.qml
ors/: docker-compose.yml
ors/ors-docker/files/: solar_index_Worms_170.csv  streets_shadow_index_170.csv  streets_shadow_index_240.csv  worms.osm.pbf
src/: run.py
src/modules/: cleanup.py  download_pois.py  evaluation.py  route_generator.py  utils.py  validate_args.py  validate_config.py
src/modules/route_analyst/: client.py  response.py  route.py
src/modules/tests/: __init__.py  test_evaluation.py  test_route_analyst.py  test_route_generator.py  test_utils.py
src/notebooks/: hse_analysis.ipynb  hse_share.ipynb  route_level.ipynb  routing_statistics.ipynb  segment_level.ipynb  segments_rank_filtering.ipynb  sensitivities.ipynb  sensitivity_analysis.ipynb
